[package]
name = "iron-pack"
version = "0.1.0"
description = "Zero-configuration compression middleware for iron"
keywords = ["iron", "compress", "gzip", "deflate"]
authors = ["Stefan Lau <github@stefanlau.com>"]
repository = "https://github.com/selaux/iron-pack"
license = "MIT"

[lib]
name = "iron_pack"

[dependencies]
iron = "0.5"
libflate = "0.1"
brotli = "1.0"

[dev-dependencies]
iron-test = "0.5"
